Added support for swapping textures with the SpriteRenderer2D Component
Work Done:
1) Added support to swap sprites associated with the SpriteRenderer component on Entities
2) Renamed "m_World" in the EntitySystem class to "m_Registry"
3) Added support for Modules to clean up the code within the Editor itself

--- a/Fuse/Fuse.vcxproj.filters
+++ b/Fuse/Fuse.vcxproj.filters
@@ -1627,6 +1627,8 @@
       <Filter>src\Window</Filter>
     </ClInclude>
     <ClInclude Include="Vendor\ImGui\imgui_stdlib.h" />
+    <ClInclude Include="src\Modules\Module.h" />
+    <ClInclude Include="src\Modules\ModuleHandler\ModuleManager.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Vendor\GLAD\glad.c">
@@ -1705,6 +1707,7 @@
       <Filter>src\Window</Filter>
     </ClCompile>
     <ClCompile Include="Vendor\ImGui\imgui_stdlib.cpp" />
+    <ClCompile Include="src\Modules\ModuleHandler\ModuleManager.cpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Vendor\Libraries\Fuse\Fuse.lib">
